[package]
name = "q3tool"
version = "0.1.3"
edition = "2018"
authors = ["Dogue"]
repository = "https://github.com/dogue/q3tool-rs"
homepage = "https://github.com/dogue/q3tool-rs"
license = "MIT"
readme = "README.md"
description = "A Rust library for interacting with ioq3 (Quake 3) based game servers."
keywords = ["quake", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"